infrastructure/k8s/comment/comment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  selector:
    app: comment
  type: ClusterIP
  ports:
    - name: comment
      protocol: TCP
      port: 8000
      targetPort: 8000
