infrastructure/k8s/comment/comment-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: comment-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: api.itdog.de
      http:
        paths:
          - path: /comment(/|$)(.*)
            backend:
              serviceName: comment-service
              servicePort: 8000
